# BIMSIG

./: .dockerignore  .env.production.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: docker-entrypoint.sh
docs/adr/: ADR-0001-record-rev11-as-architecture-baseline.md  ADR-0002-layered-modular-api-scaffold.md  ADR-0003-project-provisioning-port.md  ADR-0004-daily-physical-usb-backup.md  ADR-0005-persistence-strategy.md  ADR-0006-authentication-and-authorization.md  ADR-0007-nas-integration.md  ADR-0008-postgis-integration.md  ADR-0009-geoserver-integration.md  ADR-0010-google-workspace-transition-integration.md  ADR-0011-deployment-strategy.md  ADR-0012-ci-cd-strategy.md  ADR-0013-database-schema-and-migrations.md  ADR-0014-enterprise-multitenancy.md  ADR-0015-tower-vs-websig-boundary.md  ADR-0016-enterprise-licensing.md  ADR-0017-project-provisioning-engine.md  ADR-0018-corporate-executive-dashboard.md  ADR-0019-nas-corporate-information-center.md  ADR-0020-corporate-user-security-system.md  ADR-0021-devsecops-operating-model.md  ADR-0022-permanent-architecture-governance-rule.md  ADR-0023-corporate-gis-administration.md  ADR-0024-adopt-rev13-corporate-governance-baseline.md  ADR-0025-corporate-portfolio-domain.md  ADR-0026-websig-factory-controlled-provisioning.md  ADR-0028-corporate-gis-intelligence.md  (+3 more)
migrations/: README.md  env.py  script.py.mako
scripts/: backup_to_usb.ps1  export_openapi.py  production_backup.sh  release_check.ps1  validate_architecture.py
(+169 files in other folders)
